--- a/CourseScheduleApp/app/build.gradle
+++ b/CourseScheduleApp/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
