--- a/ToDoList/gradle/wrapper/gradle-wrapper.properties
+++ b/ToDoList/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Jan 08 13:13:03 ICT 2021
+#Mon Jul 10 06:00:23 WIB 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
