--- a/ToDoList/app/build.gradle
+++ b/ToDoList/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.dicoding.todoapp"
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -24,30 +24,31 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
+    namespace 'com.dicoding.todoapp'
 }
 
 dependencies {
     ext {
-        core_version = "1.8.0"
-        appcompat_version = "1.4.2"
-        material_version = "1.6.1"
+        core_version = "1.10.1"
+        appcompat_version = "1.6.1"
+        material_version = "1.9.0"
         constraint_version = "2.1.4"
 
         junit_version = "4.13.2"
-        ext_junit_version = "1.1.3"
-        espresso_version = '3.4.0'
+        ext_junit_version = "1.1.5"
+        espresso_version = '3.5.1'
         runner_version = '1.2.0'
 
-        room_version = "2.5.0-alpha02"
-        arch_lifecycle_version = '2.4.1'
-        lifecycle_version = "2.4.1"
-        work_version = "2.7.1"
+        room_version = "2.5.2"
+        arch_lifecycle_version = '2.6.1'
+        lifecycle_version = "2.6.1"
+        work_version = "2.8.1"
         preference_version = "1.2.0"
         paging_version = "2.1.2"
     }
@@ -74,5 +75,8 @@ dependencies {
     implementation "androidx.preference:preference-ktx:$preference_version"
 
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation ('com.adevinta.android:barista:4.2.0') {
+        exclude group: 'org.jetbrains.kotlin'
+    }
 }
