--- a/ToDoList/app/src/main/AndroidManifest.xml
+++ b/ToDoList/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.dicoding.todoapp">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +22,6 @@
         <activity android:name=".ui.add.AddTaskActivity" />
         <activity
             android:name=".ui.list.TaskActivity"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TodoApp.NoActionBar"
             android:exported="true">
             <intent-filter>
@@ -31,5 +31,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
