--- a/HabitApp/app/src/main/AndroidManifest.xml
+++ b/HabitApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.dicoding.habitapp">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:name=".HabitApplication"
         android:allowBackup="true"
