--- a/CourseScheduleApp/app/build.gradle
+++ b/CourseScheduleApp/app/build.gradle
@@ -5,12 +5,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
+    namespace 'com.dicoding.courseschedule'
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.dicoding.courseschedule"
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -24,34 +25,32 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 }
 
 dependencies {
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'junit:junit:4.12'
     ext {
-        core_version = "1.8.0"
-        appcompat_version = "1.4.2"
+        core_version = "1.10.1"
+        appcompat_version = "1.6.1"
+        material_version = "1.9.0"
         constraint_version = "2.1.4"
-        material_version = "1.6.1"
-        room_version = "2.4.2"
+        room_version = "2.5.2"
         paging_version = "2.1.2"
-        lifecycle_version = "2.4.1"
+        lifecycle_version = "2.6.1"
         preference_version = "1.2.0"
         junit_version = "4.13.2"
-        ext_junit_version = "1.1.3"
-        work_version = "2.7.1"
-        runner_version = '1.4.0'
-        espresso_version = '3.4.0'
+        ext_junit_version = "1.1.5"
+        work_version = "2.8.1"
+        runner_version = '1.2.0'
+        espresso_version = '3.5.1'
     }
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -78,4 +77,9 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
+
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation('com.adevinta.android:barista:4.2.0') {
+        exclude group: 'org.jetbrains.kotlin'
+    }
 }
